# LearningSpaCy

./: README.md  pyproject.toml  spacy_download_models.py
LearningSpaCy/: chapter1.py  chapter2.py  chapter3.py  output1.txt  output2.txt  output3.txt
LearningSpaCy/SampleData/: bookquotes.json
LearningSpacy/AirplaneNER/: README.md  airplane_ner.py
LearningSpacy/AirplaneNER/OutputData/model-best/: meta.json
LearningSpacy/AirplaneNER/OutputData/model-last/: config.cfg
LearningSpacy/AirplaneNER/OutputData/model-last/ner/: model
LearningSpacy/AirplaneNER/TrainingData/: train.json
LearningSpacy/BeginnerSpacyCourse/: README.md  main.py  output.txt
LearningSpacy/BeginnerSpacyCourse/Data/: apple.txt
LearningSpacy/OfficialSpacyCourse/: README.md
LearningSpacy/OfficialSpacyCourse/TrainData/: train.spacy
LearningSpacy/OfficialSpacyCourse/output/model-last/: config.cfg  meta.json
LearningSpacy/OfficialSpacyCourse/output/model-last/ner/: model  moves
LearningSpacy/OfficialSpacyCourse/output/model-last/vocab/: strings.json
LearningSpacy/SpacyCourse/: chapter1.py  chapter4.py  output1.txt  output2.txt  output4.txt
LearningSpacy/SpacyCourse/SampleData/: capitals.json  countries.json  gadgets.json  tweets.json
LearningSpacy/Textcat/: config.cfg
LearningSpacy/Textcat/data/: train.spacy
LearningSpacy/Textcat/output/model-best/: meta.json
LearningSpacy/Textcat/output/model-last/: meta.json
LearningSpacy/TextcatExample/: README.md  base_config.cfg  prepare_data.py  test_model.py
LearningSpacy/TextcatExample/data/: valid.spacy
(+3 files in other folders)
