[tool.poetry]
name = "learningspacy"
version = "0.1.0"
description = ""
authors = ["ThomasStalley <t.stalleu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
postinstall = "spacy_download_models:download_spacy_models"

